<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">


<TextView
        android:id="@+id/title_encrypt_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_encrypt_file"
        android:textSize="24sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />


    <EditText
        android:id="@+id/etSecretMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="secret message"
        android:hint="@string/etMessage"
        android:layout_below="@id/title_encrypt_file"
        android:layout_marginTop="20dp"
        android:inputType="text" />

    <EditText
        android:id="@+id/etSecretKey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="secret key"
        android:hint="@string/etKey"
        android:inputType="textPassword"
        android:layout_below="@id/etSecretMessage"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/btnUploadFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_file"

        android:layout_below="@id/etSecretKey"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/btnEncrypt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/encrypt"
        android:layout_below="@id/btnUploadFile"
        android:layout_marginTop="20dp"
        android:background="@color/primaryColor"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/tvSuccessMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnEncrypt"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        android:textColor="@android:color/holo_green_dark"/>

    <Button
        android:id="@+id/btnDownload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/download"
        android:layout_below="@id/tvSuccessMessage"
        android:layout_marginTop="10dp"
        android:visibility="gone" />

</RelativeLayout>
