<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/backgroundColor">


    <TextView
        android:id="@+id/dashboardTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stego"
        android:textSize="24sp"
        android:textColor="@color/primaryColor"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"/>

    <Button
        android:id="@+id/btnAudio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/audio"
        android:layout_below="@id/dashboardTextView"
        android:layout_centerInParent="true"/>

    <Button
        android:id="@+id/btnVideo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/video"
        android:layout_below="@id/btnAudio"
        android:layout_centerInParent="true"/>

    <Button
        android:id="@+id/btnImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image"
        android:layout_below="@id/btnVideo"
        android:layout_centerInParent="true" />

</RelativeLayout>