<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/backgroundColor">

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_message"
        android:textSize="24sp"
        android:textColor="@color/primaryColor"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_below="@id/welcomeTextView"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        android:background="@drawable/edit_text_background"
        android:autofillHints="username"
        android:inputType="text"/>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_below="@id/usernameEditText"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:background="@drawable/edit_text_background"
        android:autofillHints="password"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_below="@id/passwordEditText"
        android:layout_marginTop="20dp"
        android:background="@color/buttonColor"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/signupButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:layout_below="@id/loginButton"
        android:layout_marginTop="10dp"
        android:background="@color/buttonColor"
        android:textColor="@android:color/white"/>
</RelativeLayout>
