<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp" >


    <TextView
        android:id="@+id/title_decrypt_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_decrypt_file"
        android:textSize="24sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

    <EditText
        android:id="@+id/etSecretKey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Key"
        android:hint="@string/etKey"
        android:layout_below="@id/title_decrypt_file"
        android:inputType="text" />

    <Button
        android:id="@+id/btnUploadFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_file"
        android:layout_below="@id/etSecretKey"/>

    <Button
        android:id="@+id/btnDecrypt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/decrypt"
        android:layout_below="@id/btnUploadFile"/>

    <TextView
        android:id="@+id/tvSuccessMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnDecrypt"/>

    <TextView
        android:id="@+id/tvExtractedMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_below="@id/tvSuccessMessage"/>


</RelativeLayout>
