<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

    <TextView
        android:id="@+id/stego"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stego"
        android:textSize="24sp"
        android:textColor="@color/primaryColor"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"/>

    <Button
        android:id="@+id/btnEncrypt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/encrypt"
        android:layout_below="@id/stego"
        android:layout_centerInParent="true"/>


    <Button
        android:id="@+id/btnDecrypt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/decrypt"
        android:layout_below="@id/btnEncrypt"
        android:layout_centerInParent="true"/>

</RelativeLayout>
